2005-03-26  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_method): Emit explicit 'return' for void
	methods.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* tree.cc (handle_inc_dec): Convert '1' to proper type.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::wrap_label): Declare.
	* tree.cc (visit_do): Put 'test' label before EXIT_EXPR.  Call
	fold() on exit expression.
	(visit_for): Call fold() on exit expression.
	(visit_while): Call fold() on exit expression.
	(wrap_label): New method.
	(visit_do): Use it.
	(visit_for): Likewise.
	(visit_label): Likewise.
	(visit_switch): Likewise.
	(visit_switch_block): Likewise.
	(visit_while): Likewise.
	(visit_switch_block): Create new label for each switch
	expression.  Don't create a LABEL_EXPR.
	(visit_switch): Don't create LABEL_EXPR for default case.  Set
	type on SWITCH_EXPR.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (gt-java-decl.h): New target.
	* lower.cc (visit_bytecode_block): Use built_in_decls.
	* tree.cc (build_mod): Use built_in_decls to find fmod and fmodf.
	* hooks.hh (builtin_fmod): Removed.
	* decl.cc (builtin_creator_function, string_or_tree,
	builtin_record, java_builtins, max_builtin, min_builtin,
	abs_builtin, define_builtin, initialize_builtins): From gcj.
	(initialize_decls): Call initialize_builtins.
	(builtin_fmod): Removed.
	(initialize_builtin_functions): Removed old comment.
	Include gt-java-decl.h.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_assert): Yield empty statement if assertions not
	desired.  Create new AssertionError.  Correctly handle case where
	no second argument exists.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (map_utf8const): Call pushdecl.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* tree.cc (wrap_synchronized): Don't put a type on a
	TRY_FINALLY_EXPR.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_try): Don't create TRY_CATCH_EXPR if there are no
	catch blocks.
